<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/tvTitleProfile"
        android:layout_width="354dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/please_complete_your_profile_data"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBirthdate"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/birthdate"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/gender"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleProfile"/>

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/height"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGender" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:text="@string/weight"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeight"/>

    <TextView
        android:id="@+id/tvChosenDate"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toEndOf="@+id/tvBirthdate"
        app:layout_constraintTop_toBottomOf="@+id/evWeight"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/evWeight"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toEndOf="@+id/tvWeight"
        app:layout_constraintTop_toBottomOf="@id/evHeight"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/evHeight"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toEndOf="@+id/tvHeight"
        app:layout_constraintTop_toBottomOf="@id/spinnerGender"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toEndOf="@+id/tvGender"
        app:layout_constraintTop_toBottomOf="@id/tvTitleProfile"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnChooseDate"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/choose_a_date"
        app:backgroundTint="@null"
        android:background="@color/blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthdate" />

    <Button
        android:id="@+id/btnBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="32dp"
        android:text="@string/back"
        app:backgroundTint="@null"
        android:background="@color/blue_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseDate" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="88dp"
        android:text="@string/submit"
        app:backgroundTint="@null"
        android:background="@color/blue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseDate" />


</androidx.constraintlayout.widget.ConstraintLayout>