<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.HomeFragment">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="131dp"
        android:layout_height="34dp"
        android:layout_marginStart="30dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:text="@string/level"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/tvMotivation"
        android:layout_width="324dp"
        android:layout_height="59dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/your_almost_reached_your_goal_keep_going"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelTextView"
        app:layout_constraintVertical_bias="0.189" />

    <TextView
        android:id="@+id/currStateTextView"
        android:layout_width="327dp"
        android:layout_height="28dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/your_current_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBirthDateMain"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="64dp"
        android:layout_height="28dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currStateTextView"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightInputText"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView"
        app:layout_constraintVertical_bias="0.0">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="79dp"
        android:layout_height="28dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/heightTextView"
        app:layout_constraintTop_toBottomOf="@+id/currStateTextView"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightInputText"
        android:layout_width="78dp"
        android:layout_height="31dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeight"
        app:layout_constraintVertical_bias="0.007">

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="315dp"
        android:layout_height="28dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="72dp"
        android:scaleY="4"
        app:layout_constraintBottom_toTopOf="@+id/tvMotivation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/progressPercentage"
        android:layout_width="42dp"
        android:layout_height="15dp"
        android:layout_alignStart="@id/progressBar"
        android:layout_alignTop="@id/progressBar"
        android:layout_alignEnd="@id/progressBar"
        android:layout_alignBottom="@id/progressBar"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="77dp"
        android:layout_height="19dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="42dp"
        android:text="@string/points"
        app:layout_constraintBottom_toTopOf="@+id/tvMotivation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnChange"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/set"
        android:background="@color/blue_light"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightInputText"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnChange2"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/set"
        android:background="@color/blue_light"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightInputText" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/log_out"
        app:backgroundTint="@null"
        android:background="@color/blue_light"
        app:layout_constraintBottom_toTopOf="@+id/usernameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/tvGenderMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMotivation" />

    <TextView
        android:id="@+id/tvBirthDateMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/birthdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderMain" />

    <TextView
        android:id="@+id/tvGenderInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/tvGenderMain"
        app:layout_constraintTop_toBottomOf="@+id/tvMotivation" />

    <TextView
        android:id="@+id/tvBirthDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        app:layout_constraintStart_toEndOf="@+id/tvBirthDateMain"
        app:layout_constraintTop_toBottomOf="@+id/tvGenderInput" />

</androidx.constraintlayout.widget.ConstraintLayout>