<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GoalChangeFragment">


    <TextView
        android:id="@+id/tvTitleGoal"
        android:layout_width="247dp"
        android:layout_height="54dp"
        android:layout_marginTop="56dp"
        android:text="@string/please_enter_the_new_goal_data"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNewGoal"
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleGoal"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/days_week"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toEndOf="@+id/etNewGoal"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleGoal" />

    <Button
        android:id="@+id/btnSetGoal"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:text="@string/set"
        android:background="@color/blue_light"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewGoal" />

</androidx.constraintlayout.widget.ConstraintLayout>